# UneEtoileDansLaNuit

./: .clang-format  .gitignore  CMakeLists.txt  UneEtoileConfig.cmake.in  UneEtoileConfigVersion.cmake.in  app.ini  build.py  dependencies_compilation.bat  generate_input_class.cmake
dependencies/: dependencies.json  dependencies_compilation.bat  dependencies_compilation.sh
dependencies/pttk/: CMakeLists.txt
dependencies/pttk/extra/: CMakeLists.txt
dependencies/pttk/extra/logParser/: CMakeLists.txt  logParser.cpp  loglineinfo.cpp  loglineinfo.h  main.cpp
dependencies/pttk/include/: executiontimer.h  logger.h
dependencies/pttk/src/: log.cpp  logger.cpp  stringtools.cpp
extra/ModelViewer/: CMakeLists.txt  basicshader.cpp  basicshader.h  main.cpp  mainscene.cpp  mainscene.h  triangle.cpp  triangle.h
extra/ModelViewer/shaders/gl/: BasicShader.frag  BasicShader.vert
extra/ModelViewer/shaders/gles/: BasicShader.frag  BasicShader.vert
extra/logParser/: CMakeLists.txt  logParser.cpp  logParser.h  main.cpp
include/UneEtoile/: appinfo.h
include/UneEtoile/imgui/: iimguiuserinterface.h  imguihandler.h
include/UneEtoile/imgui/base/: imgui.h  imgui_internal.h
include/UneEtoile/imgui/widget/: appinfowidget.h  camerawidget.h  controlschemewidget.h  gameobjectwidget.h  scenewidget.h  textureexplorerwidget.h
include/UneEtoile/input/: abstractactionmap.h  abstractcontrolscheme.h  action.h  binding.h  bindingfactory.h  cameramanipulation.h  inputenum.h  inputhandler.h  inputrecorder.h  inputtype.h
include/UneEtoile/render/: abstractmeshhandler.h  abstractrenderer.h  abstractshader.h  abstracttexture.h  irenderidcard.h  shaderfactory.h  texture.h  texturefactory.h
include/UneEtoile/render/opengl/: commonglidcard.h  commonglmeshhandler.h  commonglrenderer.h  commonglshader.h  commongltexture.h  openglidcard.h  openglrenderer.h  openglshader.h  opengltexture.h
include/UneEtoile/render/opengl/gl/: glidcard.h  glrenderer.h  glshader.h  gltexture.h
include/UneEtoile/render/opengl/gles/: glesidcard.h  glesrenderer.h  glesshader.h  glestexture.h
include/UneEtoile/scene/: abstractshaderhandler.h  camera.h  freeflycamera.h  gameobject.h  iscene.h  mesh.h  model.h  transform.h
include/UneEtoile/window/: mainwindow.h
resources/: app.ini
resources/inputs/: README.md  basicinputs.json  camera.json  cameramanipulation.json  classtemplate.py  enumtosdl.py  inputclassgenerator.py
shaders/glsl/: basicshader.frag
src/: appinfo.cpp  appinfo.h  basicshader.cpp  basicshader.h  gameobject.cpp  gameobject.h  iscene.cpp  iscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  model.cpp  shaderutil.cpp  shaderutil.h  texture.cpp  texture.h  texturefactory.cpp  texturefactory.h  transform.cpp  transform.h  windowinifile.cpp  windowinifile.h
src/file/: abstractinidefinition.h  abstractreader.cpp  abstractreader.h  inifile.h  plaintextfile.cpp  plaintextfile.h  windowinifile.cpp  windowinifile.h
src/imgui/: appinfowidget.cpp  appinfowidget.h  iimguiuserinterface.cpp  iimguiuserinterface.h  imguihandler.cpp  imguihandler.h  textureexplorerwidget.cpp  textureexplorerwidget.h
src/imgui/widget/: appinfowidget.cpp  camerawidget.cpp  controlschemewidget.cpp  gameobjectwidget.cpp  scenewidget.cpp  textureexplorerwidget.cpp
src/input/: abstractactionmap.cpp  abstractactionmap.h  abstractcontrolscheme.cpp  abstractcontrolscheme.h  action.cpp  action.h  binding.cpp  binding.h  bindingfactory.cpp  cameramanipulation.cpp  iactionlistener.h  input.h  inputhandler.cpp  inputhandler.h  inputrecorder.cpp  inputrecorder.h  inputtype.h
src/render/: abstractmeshhandler.cpp  abstractrenderer.cpp  abstractshader.cpp  abstracttexture.cpp  basicshader.cpp  irenderidcard.cpp  shaderfactory.cpp  shaderutil.cpp  texture.cpp  texturefactory.cpp
src/render/opengl/: commonglidcard.cpp  commonglmeshhandler.cpp  commonglrenderer.cpp  commonglshader.cpp  commongltexture.cpp  openglidcard.cpp  openglrenderer.cpp  openglshader.cpp  opengltexture.cpp
src/render/opengl/gl/: glidcard.cpp  glrenderer.cpp  glshader.cpp  gltexture.cpp
src/render/opengl/gles/: glesidcard.cpp  glesrenderer.cpp  glesshader.cpp  glestexture.cpp
src/renderers/: abstractrenderer.cpp  abstractrenderer.h  irenderidcard.cpp  irenderidcard.h  texture.cpp  texturefactory.cpp  texturefactory.h
src/renderers/opengl/: openglidcard.cpp  openglidcard.h  openglrenderer.cpp  openglrenderer.h  opengltexture.cpp  opengltexture.h
src/scene/: abstractshaderhandler.cpp  camera.cpp  gameobject.cpp  iscene.cpp  mesh.cpp  model.cpp  transform.cpp
src/tools/: debug.h  executiontimer.h  log.cpp  log.h  logger.cpp  logger.h  macro.h  stringtools.h
src/window/: mainwindow.cpp  windowinifile.cpp
